CHange test manager configuration to support 5.0 capabilities